--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,6 +110,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
@@ -195,7 +196,6 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 178.170.37.11;
 allow 178.17.170.184;
 allow 178.17.170.23;
@@ -227,6 +227,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.215.218.50;
 allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
@@ -348,6 +349,7 @@ allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
 allow 185.220.101.143;
+allow 185.220.101.144;
 allow 185.220.101.145;
 allow 185.220.101.146;
 allow 185.220.101.147;
@@ -716,6 +718,7 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:801:2000::2b97;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -809,6 +812,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -860,6 +864,7 @@ allow 217.12.215.167;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.160.88.146;
+allow 217.27.189.205;
 allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.248.152;
@@ -1066,7 +1071,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1236,6 +1240,7 @@ allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
+allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
@@ -1428,6 +1433,7 @@ allow 2a12:5940:c80b::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c820::2;
 allow 2a12:5940:c826::2;
+allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
@@ -1438,6 +1444,7 @@ allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
 allow 37.120.166.23;
+allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.24;
@@ -1482,6 +1489,7 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
+allow 45.15.158.165;
 allow 45.15.158.39;
 allow 45.33.15.243;
 allow 45.56.81.190;
@@ -1542,6 +1550,7 @@ allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1569,7 +1578,6 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
-allow 54.165.249.98;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1742,4 +1750,5 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
