--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,6 +110,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
@@ -195,7 +196,6 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
@@ -227,6 +227,7 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.215.218.50;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -348,6 +349,7 @@ set_real_ip_from 185.220.101.140;
 set_real_ip_from 185.220.101.141;
 set_real_ip_from 185.220.101.142;
 set_real_ip_from 185.220.101.143;
+set_real_ip_from 185.220.101.144;
 set_real_ip_from 185.220.101.145;
 set_real_ip_from 185.220.101.146;
 set_real_ip_from 185.220.101.147;
@@ -716,6 +718,7 @@ set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
 set_real_ip_from 2001:41d0:801:2000::2b97;
+set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
@@ -809,6 +812,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -860,6 +864,7 @@ set_real_ip_from 217.12.215.167;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.160.88.146;
+set_real_ip_from 217.27.189.205;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.139;
 set_real_ip_from 23.137.248.152;
@@ -1066,7 +1071,6 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1236,6 +1240,7 @@ set_real_ip_from 2a0b:f4c2:1::140;
 set_real_ip_from 2a0b:f4c2:1::141;
 set_real_ip_from 2a0b:f4c2:1::142;
 set_real_ip_from 2a0b:f4c2:1::143;
+set_real_ip_from 2a0b:f4c2:1::144;
 set_real_ip_from 2a0b:f4c2:1::145;
 set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
@@ -1428,6 +1433,7 @@ set_real_ip_from 2a12:5940:c80b::2;
 set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c820::2;
 set_real_ip_from 2a12:5940:c826::2;
+set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
@@ -1438,6 +1444,7 @@ set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
+set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.24;
@@ -1482,6 +1489,7 @@ set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
 set_real_ip_from 45.151.167.13;
 set_real_ip_from 45.15.157.177;
+set_real_ip_from 45.15.158.165;
 set_real_ip_from 45.15.158.39;
 set_real_ip_from 45.33.15.243;
 set_real_ip_from 45.56.81.190;
@@ -1542,6 +1550,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1569,7 +1578,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.165.249.98;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1742,4 +1750,5 @@ set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.27.198.133;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
