--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -196,6 +196,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
@@ -227,7 +228,6 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.215.218.50;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
@@ -865,6 +865,46 @@ set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.160.88.146;
 set_real_ip_from 217.27.189.205;
+set_real_ip_from 23.129.64.130;
+set_real_ip_from 23.129.64.131;
+set_real_ip_from 23.129.64.132;
+set_real_ip_from 23.129.64.133;
+set_real_ip_from 23.129.64.134;
+set_real_ip_from 23.129.64.135;
+set_real_ip_from 23.129.64.136;
+set_real_ip_from 23.129.64.137;
+set_real_ip_from 23.129.64.138;
+set_real_ip_from 23.129.64.139;
+set_real_ip_from 23.129.64.140;
+set_real_ip_from 23.129.64.141;
+set_real_ip_from 23.129.64.142;
+set_real_ip_from 23.129.64.143;
+set_real_ip_from 23.129.64.144;
+set_real_ip_from 23.129.64.145;
+set_real_ip_from 23.129.64.146;
+set_real_ip_from 23.129.64.147;
+set_real_ip_from 23.129.64.148;
+set_real_ip_from 23.129.64.149;
+set_real_ip_from 23.129.64.210;
+set_real_ip_from 23.129.64.211;
+set_real_ip_from 23.129.64.212;
+set_real_ip_from 23.129.64.213;
+set_real_ip_from 23.129.64.214;
+set_real_ip_from 23.129.64.215;
+set_real_ip_from 23.129.64.216;
+set_real_ip_from 23.129.64.217;
+set_real_ip_from 23.129.64.218;
+set_real_ip_from 23.129.64.219;
+set_real_ip_from 23.129.64.220;
+set_real_ip_from 23.129.64.221;
+set_real_ip_from 23.129.64.222;
+set_real_ip_from 23.129.64.223;
+set_real_ip_from 23.129.64.224;
+set_real_ip_from 23.129.64.225;
+set_real_ip_from 23.129.64.226;
+set_real_ip_from 23.129.64.227;
+set_real_ip_from 23.129.64.228;
+set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.139;
 set_real_ip_from 23.137.248.152;
@@ -1043,6 +1083,46 @@ set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:b500:408:3100::1;
 set_real_ip_from 2607:f530:8002::19;
+set_real_ip_from 2620:18c:0:192::130;
+set_real_ip_from 2620:18c:0:192::131;
+set_real_ip_from 2620:18c:0:192::132;
+set_real_ip_from 2620:18c:0:192::133;
+set_real_ip_from 2620:18c:0:192::134;
+set_real_ip_from 2620:18c:0:192::135;
+set_real_ip_from 2620:18c:0:192::136;
+set_real_ip_from 2620:18c:0:192::137;
+set_real_ip_from 2620:18c:0:192::138;
+set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
+set_real_ip_from 2620:18c:0:192::141;
+set_real_ip_from 2620:18c:0:192::142;
+set_real_ip_from 2620:18c:0:192::143;
+set_real_ip_from 2620:18c:0:192::144;
+set_real_ip_from 2620:18c:0:192::145;
+set_real_ip_from 2620:18c:0:192::146;
+set_real_ip_from 2620:18c:0:192::147;
+set_real_ip_from 2620:18c:0:192::148;
+set_real_ip_from 2620:18c:0:192::149;
+set_real_ip_from 2620:18c:0:192::210;
+set_real_ip_from 2620:18c:0:192::211;
+set_real_ip_from 2620:18c:0:192::212;
+set_real_ip_from 2620:18c:0:192::213;
+set_real_ip_from 2620:18c:0:192::214;
+set_real_ip_from 2620:18c:0:192::215;
+set_real_ip_from 2620:18c:0:192::216;
+set_real_ip_from 2620:18c:0:192::217;
+set_real_ip_from 2620:18c:0:192::218;
+set_real_ip_from 2620:18c:0:192::219;
+set_real_ip_from 2620:18c:0:192::220;
+set_real_ip_from 2620:18c:0:192::221;
+set_real_ip_from 2620:18c:0:192::222;
+set_real_ip_from 2620:18c:0:192::223;
+set_real_ip_from 2620:18c:0:192::224;
+set_real_ip_from 2620:18c:0:192::225;
+set_real_ip_from 2620:18c:0:192::226;
+set_real_ip_from 2620:18c:0:192::227;
+set_real_ip_from 2620:18c:0:192::228;
+set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
@@ -1071,6 +1151,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1453,6 +1534,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.216.210.136;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
@@ -1717,7 +1799,6 @@ set_real_ip_from 93.243.56.177;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
-set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.99.104.128;
