--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -244,6 +244,46 @@ set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:b500:408:3100::1;
 set_real_ip_from 2607:f530:8002::19;
+set_real_ip_from 2620:18c:0:192::130;
+set_real_ip_from 2620:18c:0:192::131;
+set_real_ip_from 2620:18c:0:192::132;
+set_real_ip_from 2620:18c:0:192::133;
+set_real_ip_from 2620:18c:0:192::134;
+set_real_ip_from 2620:18c:0:192::135;
+set_real_ip_from 2620:18c:0:192::136;
+set_real_ip_from 2620:18c:0:192::137;
+set_real_ip_from 2620:18c:0:192::138;
+set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
+set_real_ip_from 2620:18c:0:192::141;
+set_real_ip_from 2620:18c:0:192::142;
+set_real_ip_from 2620:18c:0:192::143;
+set_real_ip_from 2620:18c:0:192::144;
+set_real_ip_from 2620:18c:0:192::145;
+set_real_ip_from 2620:18c:0:192::146;
+set_real_ip_from 2620:18c:0:192::147;
+set_real_ip_from 2620:18c:0:192::148;
+set_real_ip_from 2620:18c:0:192::149;
+set_real_ip_from 2620:18c:0:192::210;
+set_real_ip_from 2620:18c:0:192::211;
+set_real_ip_from 2620:18c:0:192::212;
+set_real_ip_from 2620:18c:0:192::213;
+set_real_ip_from 2620:18c:0:192::214;
+set_real_ip_from 2620:18c:0:192::215;
+set_real_ip_from 2620:18c:0:192::216;
+set_real_ip_from 2620:18c:0:192::217;
+set_real_ip_from 2620:18c:0:192::218;
+set_real_ip_from 2620:18c:0:192::219;
+set_real_ip_from 2620:18c:0:192::220;
+set_real_ip_from 2620:18c:0:192::221;
+set_real_ip_from 2620:18c:0:192::222;
+set_real_ip_from 2620:18c:0:192::223;
+set_real_ip_from 2620:18c:0:192::224;
+set_real_ip_from 2620:18c:0:192::225;
+set_real_ip_from 2620:18c:0:192::226;
+set_real_ip_from 2620:18c:0:192::227;
+set_real_ip_from 2620:18c:0:192::228;
+set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -271,6 +311,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
