--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -125,6 +125,7 @@ deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::1;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
+deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -354,6 +355,7 @@ deny 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+deny 2a03:4000:6:b136::4;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 deny 2a03:6f20:531::254;
@@ -432,9 +434,7 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
-deny 2a06:1700:1::11;
 deny 2a06:1700:1:1a::1;
-deny 2a06:1700:1:2a::7;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
@@ -658,7 +658,6 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:1fc0:3::4289:69b8;
 deny 2a10:8a40:f313::29;
-deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
