--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -179,6 +179,7 @@ set_real_ip_from 171.25.193.25;
 set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.79;
 set_real_ip_from 171.25.193.80;
+set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.232.161.206;
 set_real_ip_from 172.81.131.139;
@@ -235,7 +236,6 @@ set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
 set_real_ip_from 185.100.85.24;
 set_real_ip_from 185.100.85.25;
-set_real_ip_from 185.100.86.128;
 set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.139;
 set_real_ip_from 185.100.87.174;
@@ -964,6 +964,7 @@ set_real_ip_from 2.58.95.59;
 set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1194,6 +1195,7 @@ set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+set_real_ip_from 2a03:4000:6:b136::4;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:6f20:531::254;
@@ -1272,9 +1274,7 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:1::11;
 set_real_ip_from 2a06:1700:1:1a::1;
-set_real_ip_from 2a06:1700:1:2a::7;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1498,7 +1498,6 @@ set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:3::4289:69b8;
 set_real_ip_from 2a10:8a40:f313::29;
-set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1523,18 +1522,16 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 3.229.94.66;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
+set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
-set_real_ip_from 37.228.129.128;
-set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.24;
-set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.239.62;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.216.210.136;
 set_real_ip_from 45.128.232.102;
 set_real_ip_from 45.128.232.170;
 set_real_ip_from 45.132.246.245;
@@ -1782,7 +1779,6 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
-set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
@@ -1799,6 +1795,7 @@ set_real_ip_from 93.243.56.177;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
+set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.99.104.128;
