--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -90,7 +91,6 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
-allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -227,7 +227,6 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 184.105.48.40;
 allow 184.75.221.163;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -623,6 +622,7 @@ allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.46.227.185;
 allow 192.99.168.180;
+allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.163.170.149;
 allow 193.168.141.245;
@@ -657,6 +657,7 @@ allow 193.35.18.94;
 allow 193.35.18.95;
 allow 193.35.18.96;
 allow 193.35.18.98;
+allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
@@ -971,7 +972,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
-allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:66c4::1;
@@ -1502,6 +1502,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1526,7 +1527,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.218.49.63;
+allow 3.234.79.5;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1782,6 +1783,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
