--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -127,6 +127,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
+allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:66c4::1;
@@ -198,7 +199,6 @@ allow 2605:6400:30:f174:1111:2222:3333:4444;
 allow 2605:6400:30:f174:1:2:3:4;
 allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
-allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
@@ -327,6 +327,7 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c206:2161:161::1;
 allow 2a02:c207:3002:8283::1;
+allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -416,6 +417,7 @@ allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
